2005-04-10  Jochen Eisinger <jochen@penguin-breeder.org>

	* backend/mustek_pp.c, backend/mustek_pp.conf, sanei/sanei_pa4s2.c,
	  include/sane/sanei_pa4s2.h, doc/sane-mustek_pp.man: added global
	  option "no_epp" to work around a known bug in the linux parport
	  code.

2005-04-02  Julien Blache <jb@jblache.org>

	* doc/sane.man: typo fix from A Costa.

2005-04-01  Gerhard Jaeger <gerhard@gjaeger.de>

	* README: Added some info about the --enable-locking switch.
	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved some Plustek
	  devices over to the genesys descriptions.
	* tools/hotplug/libsane.usermap: Added some Plustek devices.
	* mkinstalldirs: Added -o and -g options for changing the
	  owner and group of an installed directory.
	* acinclude.m4, configure.in, configure: Added --enable-locking
	  and --with-group to enable device locking via sanei_access-lib
	  and to specify the group of the locking directory.
	* include/sane/config.h.in: ENABLE_LOCKING has been added
	  by automake/autoconf.
	* backend/Makefile.in: Added installation of 
	  $(localstatesanedir)/lock/sane, were the lockfile should go to.
	  Also added linking of sanei_access to the plustek backend.
	* include/Makefile.in: Added sane/sanei_access.h.
	* sanei/Makefile.in: Added sanei_access.c.
	* include/sane/sanei_access.h sanei/sanei_access.h: Initial checkin.

2005-03-31 Julien Blache <jb@jblache.org>

	* doc/scanimage.man: fix typos, patch from A Costa.

2005-03-20 Earle F. Philhower III <earle@ziplabel.com>

	* backend/sm3840_scan.c: Big-endian graymode fix

2005-03-17 Gerard Klaver <gerard at gkall dot hobby dot nl>

	* doc/descriptions-external/samsung.desc added

2005-03-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Microtek ScanMaker
	  4800 (supported by sm3840 now).

2005-03-16  Earle F. Philhower III <earle@ziplabel.com>
	* backend/sm3840.c backend/sm3840_scan.c backend/sm3840.conf