@@ -1,3 +1,7 @@
+2005-04-10  Julien Blache <jb@jblache.org>
+	* backend/hp5400_xfer.h, backend/hp5400_sanei.c, backend/hp5400.c:
+	  make non-SANE-standard functions static.
+
 2005-04-10  Jochen Eisinger <jochen@penguin-breeder.org>
 
 	* backend/mustek_pp.c, backend/mustek_pp.conf, sanei/sanei_pa4s2.c,
